--- a/xunta-web/src/main/webapp/client_code/css/common_web.css
+++ b/xunta-web/src/main/webapp/client_code/css/common_web.css
@@ -26,10 +26,11 @@
 }
 ._closeBtn{
     float:right;
-    margin:6px 10px 6px 5px;
+    //margin:6px 10px 6px 5px;
     border-left:1px solid #d8d8d8;
 }
 ._closeBtn>img{
-    width:18px;height:18px;
-    padding-left: 10px;
+    width:25px;height:22px;
+    padding-left: 5px;
+	padding-top:3px;
 }
