--- a/xunta-web/src/main/webapp/client_code/css/popcontext.css
+++ b/xunta-web/src/main/webapp/client_code/css/popcontext.css
@@ -3,7 +3,7 @@
 
 .pop-title{
     float: left;width: 100%;height: 40px;line-height: 40px;
-    border-bottom: 1px solid #f1f1f1;font-size: 10px;
+    border-bottom: 1px solid #f1f1f1;font-size: 15px;
     color: #999;
 }
 .title-div{
@@ -13,9 +13,9 @@
 .title-div span{
     padding-left: 15px;
 
-    padding-top: 5px; /*@wsy 2016-10-14*/
+    //padding-top: 5px; /*@wsy 2016-10-14*/
     float: left;/*@wsy 2016-10-14*/
-    line-height: 15px; /*@wsy 2016-10-14*/
+    line-height: 19px; /*@wsy 2016-10-14*/
 }
 .close-div{
     float: left;width: 11%;/*@wsy 2016-10-11*/
@@ -23,20 +23,25 @@
     text-align: right;
     cursor: pointer;
 }
+
+.close-div img{
+	width:15px;
+}
+
 #popContext{
-    float: left;width: 96%;font-size: 10px;
+    float: left;width: 96%;font-size: 14px;
     padding:0 2%;overflow:auto;
 }
 
 
 #relationContext{
-    float: left;width: 93%;font-size: 10px;
+    float: left;width: 93%;font-size: 14px;
     padding:0 5% 0 2%;overflow-y:auto;overflow-x: hidden;}
 
 .btn-div{
     float: left;width: 100%;text-align: center;
     border-top: 1px solid #f1f1f1;
-    height: 60px;line-height: 60px;
+    height: 60px;line-height: 60px;font-size:16px;
 }
 .pop-btn{
     min-width: 86px;width:auto;height: 45px;
@@ -47,11 +52,11 @@
 .pop-btn:hover{background-color:#428bca;color: #fff;}
 
 
-#entrytopic,#choosetopic{float: left;width: 100%;font-size: 10px;}
+#entrytopic,#choosetopic{float: left;width: 100%;font-size: 15px;}
 #choosetopic{display: none;}
 .inline-rule{float: left;width: 100%;height: 30px;line-height: 30px;}
 input[type='checkbox'],input[type='radio']{vertical-align:middle;}
 .more-rule{float: left;width: 90%;height: 30px;line-height: 30px;cursor: pointer;padding: 0 0 0 5%;display: none;}
 
 
-.check-div{float: left;width: 98%;height: 30px;line-height: 30px;padding:0 0 0 2%;border-bottom: 1px solid #D3D6DD;}
+.check-div{float: left;width: 98%;height: 30px;line-height: 30px;padding:0 0 0 2%;border-bottom: 1px solid #D3D6DD;background:url('../image/titbg.gif') center top repeat-x;}
