--- a/xunta-web/src/main/webapp/client_code/css/popup.css
+++ b/xunta-web/src/main/webapp/client_code/css/popup.css
@@ -146,15 +146,15 @@ position:absolute;
 /*top:0px;
 left:30%;
 width:50%;*/
-padding:6px; 
+padding:4px; 
 //margin:0 auto;
-border:1px solid #BBBBBB;
+//border:1px solid #BBBBBB;
 border-radius: 6px;
 font-size: 12px;
 color:#444444;
 z-index: 500;
 //background-color:#EAF0F4;
-  background-color:#DFDAAA;
+  background-color:#f4f4f5;
 //margin:auto;
 //padding-top:40%;
 //padding-left:10%;
@@ -163,6 +163,7 @@ z-index: 500;
 //width:100%;
 //height:100%;
 //text-align:center;
+	
 }
 
 
