--- a/xunta-web/src/main/webapp/client_code/topics_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/topics_page/topics_page_web.css
@@ -29,32 +29,38 @@ width:100%;
 }
 
 .topic_list {
-	margin: 10px;
+	margin-top: 120px;
 	margin-right: 10px;
 	margin-left: 8px;
 	font-family: '微软雅黑', Arial;
 	//color: #303030;
-	z-index:-1;
-	padding-top:21px;
+	z-index:100;
+	//padding-top:21px;
+	//height:87%;
 }
 
 #createnewtopic {
 	//left: 11px;
 	width:33%;
-	height:100%;
+	height:59px;
 	//background:#f8f8f8;
 	border-radius:6px;
 	box-shadow:0px 2px 4px rgba(34, 25, 25, 0.2);
 	float:right;
 	margin-right:18px;
+	margin-bottom:10px;
 }
 
 .topic_top{
-	left: 11px;
+	//left: 11px;
 	width:100%;
-	height:59px;
-	margin-bottom:9px;
-	margin-top:22px;
+	height:69px;
+	//margin-bottom:9px;
+	margin-top:40px;
+	z-index:102;
+	background:#fff;
+	padding-top:10px;
+	position:fixed;
 }
 
 .userimg{
@@ -63,7 +69,8 @@ width:100%;
 	//background-color:red;
 	border-radius:50%;
 	float:right;
-	padding-top:4px;
+	padding-top:3px;
+	margin-right:15px;
 }
 
 .userimg>img {
@@ -98,7 +105,7 @@ width:100%;
 	font-size:8px;
 	font-family:'宋体', Arial;
 	margin-left:13px;
-	margin-top:35px;
+	margin-top:31px;
 	opacity:0.5;
 }
 
@@ -130,7 +137,7 @@ width:100%;
 	width: 17px;
 	height: 28px;
 	position: relative;
-	top: -37px;
+	top: -28px;
 	right: -17px;
 	//transform: rotate(45deg);
 	//background-color: #fff;
@@ -251,20 +258,22 @@ width:100%;
 .search-list-container{
 	position:fixed;
 	//margin-top: 15%;
-	top:58px;
+	top:40px;
 	left:1px;
 	right:1px;
 	bottom:1px;
-	width:95%;
-	height:93%;
+	width:97%;
+	height:94%;
 	min-width:200px;
 	display: none;
 	z-index:102;
 	background:#FFF;
+	overflow-y:scroll;
+	overflow-x:hidden;
 }
 
 .topic-content{
-	padding:5px;
+	padding:30px 5px 5px 5px;
 }
 ._titleDiv{
 	width: 100%;
@@ -272,9 +281,9 @@ width:100%;
 	margin-bottom: 5px;
 }
 .topic-Title{
-	/*width: 80%;*/
+	//width: 100%;
 	float: left;
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: 100;
 	padding-top: 5px;
 	padding-left: 5px;
@@ -283,14 +292,20 @@ width:100%;
 ._msgTime{
 	float:right;
 	padding-right: 5px;
+	font-size:10px;
 }
 ._topicMsgDiv{
 	width: 100%;
+	padding-top:20px;
 }
 .topicMsg{
-	padding-top: 2px;
-	padding-left: 45px;
-	font-size: 14px;
+	padding-top: 8px;
+	padding-left: 39px;
+	font-size: 10px;
+	/*start:叶夷
+		解决问题：在相连的人中每个人最后一个相连的话题打开始终遮盖下面的人，加上这个属性的作用是清除浮动*/
+	overflow-y:hidden;
+	/*end:叶夷*/
 }
 .topicMsgMoreDiv{
 	text-align: right;
@@ -298,13 +313,17 @@ width:100%;
 	font-size: 12px;
 }
 .topicMsgMoreText{
-	padding: 2px;
+	padding: 5px 2px 2px 2px;
 	color:#8C8C8C;
-	border:1px #8C8C8C solid;
-	border-radius: 5px;
+	//border:1px #8C8C8C solid;
+	border-radius: 4px;
+	background:url('../image/titbg.gif') center top repeat-x;
+	width:48px;
+	background-size:5px;
+	float:right;
 }
 .topicMoreDiv{
-	margin: 5px;
+	margin: 30px 5px 5px 5px;
 	padding: 5px;
 	text-align: center;
 	border-top: 1px #dddddd solid;
