--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -353,3 +353,24 @@ width:100%;
 	position:absolute;
 	text-align:center;
 }
+
+/*叶夷   2017.07.04
+	匹配人列表*/
+/*匹配人列表的容器*/
+.match_people{
+	position:absolute;
+	top:95%;
+	left:0px;
+	width:100%;
+	height:35px;
+	//background-color:black;
+}
+/*各个匹配人头像的大小*/
+.mp{
+	position:absolute;
+	width:30px;
+	height:30px;
+	border-radius:50%;
+	left:6px;
+}
+
