--- a/xunta-web/src/main/webapp/client_code/css/popcontext.css
+++ b/xunta-web/src/main/webapp/client_code/css/popcontext.css
@@ -39,9 +39,9 @@
     padding:0 5% 0 2%;overflow-y:auto;overflow-x: hidden;}
 
 .btn-div{
-    float: left;width: 100%;text-align: center;
-    border-top: 1px solid #f1f1f1;
-    height: 60px;line-height: 60px;font-size:16px;
+    float: left;width: 20%;text-align: center;
+    //border-top: 1px solid #f1f1f1;
+    height: 100%;line-height: 40px;font-size:16px;
 }
 .pop-btn{
     min-width: 86px;width:auto;height: 45px;
@@ -52,7 +52,7 @@
 .pop-btn:hover{background-color:#428bca;color: #fff;}
 
 
-#entrytopic,#choosetopic{float: left;width: 100%;font-size: 15px;}
+#entrytag{float: left;width: 100%;font-size: 15px;}
 #choosetopic{display: none;}
 .inline-rule{float: left;width: 100%;height: 30px;line-height: 30px;}
 input[type='checkbox'],input[type='radio']{vertical-align:middle;}
