--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page.css
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page.css
@@ -18,3 +18,7 @@ body{position:relative}
 	padding-left: 10px;
 }
 
+#title{color:#800000;float:left;height:32px; line-height:32px;border-left:1px solid #d8d8d8; padding-left:10px; z-index:13;}
+
+#dialog_list{font-size:14px; background-color: #ffffff; overflow-x:hidden;width:100%;height:634px;
+	border-bottom:1px solid #d8d8d8;}
