--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
@@ -156,3 +156,28 @@ line-height: 10px;
 	background-size:8px;
 }
 
+.tag-name{
+	width: 100%;
+	height: 100%;
+	outline: 0;
+	border: 0;
+	resize: none;
+}
+
+.addtag-div{
+	height: 40px;
+	margin: 0;
+	padding: 0;
+	width:80%;
+	float:left;
+}
+
+.searchtag_suggest{
+	width:99%;
+	height:100px;
+	float:left;
+	top:-10px;
+	border:1px solid #f1f1f1;
+	display:none;
+	overflow-y:auto;
+}
