--- a/xunta-web/src/main/webapp/client_code/css/popcontext.css
+++ b/xunta-web/src/main/webapp/client_code/css/popcontext.css
@@ -42,6 +42,7 @@
     float: left;width: 20%;text-align: center;
     //border-top: 1px solid #f1f1f1;
     height: 100%;line-height: 40px;font-size:16px;
+    display:none;
 }
 .pop-btn{
     min-width: 86px;width:auto;height: 45px;
