--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -65,12 +65,13 @@ width:100%;
 
 .userimg{
 	height:42px;
-	width:42px;
+	width:30%;
 	//background-color:red;
 	border-radius:50%;
 	//float:right;
 	padding-top:3px;
-	margin-left:15px;
+	margin:10px;
+	float:left;
 }
 
 .userimg>img {
@@ -167,21 +168,40 @@ width:100%;
 	width:20px;
 	height:20px;
 }
-.search-container{
-	position:fixed;
-	//top:0px;
-	//left:8px;
-	//right:1px;
-	//bottom:1px;
+.top-container{
+	//position:fixed;
 	width:100%;
-	height:40px;
-	//min-width:100px;
-	//display: inline;
+	//height:40px;
+	height:20%;
 	z-index:102;
-	//border-radius:8px;
-	background:url('../image/titbg.gif') center top repeat-x;
-	background-size:9px;
+	//background:url('../image/titbg.gif') center top repeat-x;
+	background-color:#fffff0;
+	//background-size:9px;
 }
+
+.tag-container{
+	position:relative;
+	width:100%;
+	height:73%;
+	z-index:102;
+	background-color:#fffacd;
+}
+
+/*装头像和名字的容器*/
+.header-container{
+	width:100%;
+	height:50%;
+	z-index:102;
+}
+
+/*我的标签容器*/
+.mytag-container{
+	width:100%;
+	height:50%;
+	z-index:102;
+	overflow-y:auto;
+}
+
 .search-head{
 	border:1px solid #ccc;
 	width:35%;
@@ -359,11 +379,10 @@ width:100%;
 /*匹配人列表的容器*/
 .match_users{
 	position:absolute;
-	top:95%;
+	top:90%;
 	left:0px;
 	width:100%;
-	height:35px;
-	//background-color:black;
+	height:40px;
 }
 /*各个匹配人头像的大小*/
 .mu{
@@ -374,3 +393,68 @@ width:100%;
 	left:6px;
 }
 
+/*网站名*/
+.webname{
+	height:42px;
+	width:30%;
+	float:left;
+	line-height:42px;
+	text-align:center;
+	margin-top:10px;
+	font-size:20px;
+}
+
+.othertag{
+	position:absolute; 
+	height:70%; 
+	width:100%;
+	overflow-x:hidden;
+	top:40px;
+}
+
+.othertagtext{
+	color:#2e2d35;
+	margin-left:5px;
+	margin-top:5px;
+}
+
+.match_userstext{
+	text-align:center;
+	margin-top:100%;
+}
+
+.enterdialogList{
+	width:100%;
+	height:7%;
+	background-color:#fffff0;
+	text-align:center;
+	line-height:40px;
+}
+
+.addtagimg{
+	//opacity:0.3;
+	margin-top:3px;
+	float:left;
+}
+
+.addtagimg img{
+	width:25px;
+	height:25px;
+}
+
+.mytag{
+	float: left;
+    height: 30px;
+    line-height: 30px;
+    background-color: #FFE7BA;
+    width: 50px;
+    text-align: center;
+    border-radius: 5px;
+    margin-left: 5px;
+    color: #ffffff;
+    margin-bottom:5px;
+}
+
+.mytag img{
+	width:5px;
+}
