--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -175,8 +175,9 @@ width:100%;
 	height:20%;
 	z-index:102;
 	//background:url('../image/titbg.gif') center top repeat-x;
-	background-color:#fffff0;
+	//background-color:#fffff0;
 	//background-size:9px;
+	border-bottom:1px solid #f1f1f1;
 }
 
 .tag-container{
@@ -184,7 +185,8 @@ width:100%;
 	width:100%;
 	height:73%;
 	z-index:102;
-	background-color:#fffacd;
+	//background-color:#fffacd;
+	border-bottom:1px solid #f1f1f1;
 }
 
 /*装头像和名字的容器*/
