--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page.css
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page.css
@@ -22,3 +22,20 @@ body{position:relative}
 
 #dialog_list{font-size:14px; background-color: #ffffff; overflow-x:hidden;width:100%;height:634px;
 	border-bottom:1px solid #d8d8d8;}
+	
+.unread{
+//position:absolute; top:2px; right:0px; 
+position:relative; top:-5px; right:-6px;
+height:8px; 
+//width: 10px;
+display:inline;
+border:1px solid #f08080; border-radius:4px;
+font-size:8px;
+color:#B22222;
+background-color:#f8f8f8;
+//padding:1px;
+padding-left:2px;
+padding-right:2px;
+line-height: 10px;
+//text-align:center;
+}
