--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
@@ -19,3 +19,14 @@ body{position:relative}
 }
 
 #title{color:#800000;float:left;height:32px; line-height:32px;border-left:1px solid #d8d8d8; padding-left:10px; z-index:13;}
+
+.sendMsg{
+	margin-right:10px;
+	width: 15%;
+	text-align:center;
+	background-color:#708090;
+	border-radius: 10px;
+	float:right;
+	height:25px;
+	line-height:25px;
+}
