--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
@@ -8,35 +8,59 @@ html, body {
 }
 
 .dialog{
-	height:10%;
+	height:11%;
 	width:100%;
+	border-bottom:1px solid #f1f1f1;
+	position:absolute;
 }
 
 .dialog >img{
-	width: 60px;
-	height: 60px;
-	float: left;
+	//width: 14%;
+	//height:80%;
+	position: absolute;
+	border-radius:5px;
+	//margin:1.5%;
 }
 
 .dialog_content{
-	height: 100%;
-	float: right;
-	width: 300px;
+	//height: 80%;
+	position: absolute;
+	//width: 300px;
+	//margin:1.5%;
+}
+
+.dialog_content_top{
+	float: left;
+    width: 100%;
+    height: 50%;
+    line-height: 25px;
 }
 
 .dialog_content_msg{
 	height: 50%;
 	width: 100%;
+	float:left;
+	line-height: 25px;
+	color:#cdc9c9;
+	font-size:1.2em;
 }
 
 .dialog_content_name{
 	height: 100%;
 	width:70%;
 	float:left;
+	//font-weight:500;
+	//font-size:14px;
+	color:#cdc9c9;
+	//font-size:1.3em;
 }
 
 .dialog_content_time{
 	height: 100%;
 	width:30%;
 	float:right;
+	font-size:12px;
+	color:#cdc9c9;
+	//font-size:0.5em;
+	text-align:right;
 }
