--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
@@ -52,11 +52,11 @@
 	display: none;
 }
 
-#username {
-	text-align: right;
-	height: 22px;
-	font-size: 14px;
-	border-bottom: 1px solid #cccccc
+.username {
+	text-align: center;
+	//height: 22px;
+	font-size: 1em;
+	background-color:#f9f8f9;
 }
 
 #alterUserimage {
@@ -129,19 +129,10 @@ line-height: 10px;
 //text-align:center;
 }
 .selectTagNum{
-position:absolute; top:2px;
-height:11px; 
-//width: 10px;
-display:inline;
-border:1px solid #f08080; border-radius:4px;
-font-size:8px;
-color:#B22222;
-background-color:#f8f8f8;
-//padding:1px;
-padding-left:2px;
-padding-right:2px;
-line-height: 10px;
-//text-align:center;
+	position:absolute;
+	top: 54.5px;
+	width: 100%;
+	text-align: center;
 }
 
 .latesttime {
