--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -64,19 +64,19 @@ width:100%;
 }
 
 .userimg{
-	height: 65%;
+	height: 70%;
 	width: 22%;
-	background-color:#f2f2f2;
-	margin-left:6px;
+	//background-color:#f2f2f2;
+	//margin-left:6px;
 	float:left;
 	border-radius: 10px 10px 0px 0px;
 }
 
 .userimg>img {
-	height: 85%;
-	width: 85%;
+	height: 70%;
+	//width: 80%;
 	border-radius: 50%;
-	margin:10%;
+	margin:0 10% 0 10%;
 }
 
 .topictitle {
@@ -168,48 +168,39 @@ width:100%;
 }
 .top-container{
 	width:100%;
-	height:33.5%;
+	//height:33.5%;
+	height:35%;
 	z-index:102;
 	//border-bottom:1px solid #f1f1f1;
 }
 
 .tag-container{
 	position:relative;
-	width:96%;
-	height:60%;
+	width:100%;
+	height:65%;
 	z-index:102;
-	background-color:#f1f1f1;
-	margin-left:6px;
-	top:-10px;
+	//background-color:#f1f1f1;
+	//margin-left:6px;
+	top:3%;
 }
 
 /*装头像和名字的容器*/
 .header-container{
 	width:100%;
-	height:58%;
+	height:65%;
 	z-index:102;
 }
 
 /*我的标签容器*/
 .mytag-container{
-	width: 94%;
-	height: 80%;
-	background-color: #fff;
-	margin: 2% 3% 2% 3%;
+	width: 100%;
+	height: 30%;
 	float: left;
+	border-bottom:5px solid #f9f8f9;
+	border-top:5px solid #f9f8f9;
 	overflow-y:auto;
-	overflow-x:hidden;
 }
 /*我的标签最外层容器*/
-.mytag-outer{
-	width: 96%;
-	height: 39%;
-	z-index:102;
-	background-color: #f1f1f1;
-	margin-left: 6px;
-	border-radius: 0px 10px 0px 0px;
-}
-
 .search-head{
 	border:1px solid #ccc;
 	width:35%;
@@ -385,30 +376,20 @@ width:100%;
 
 /*叶夷   2017.07.04
 	匹配人列表*/
-/*匹配人列表的容器*/
-.matchUserList{
-	position:absolute;
-	top:90%;
-	left:0px;
-	width:100%;
-	height:40px;
-}
-
-.match_users{
-	position:absolute;
-	width:90%;
-	height:100%;
-}
-
+/*进入匹配人列表的按钮*/
 .enterMatchUserList{
-	width:10%;
-	height:100%;
-	float:right;
-}
-
-.enterMatchUserList img{
-	width:30px;
-	height:30px;
+	position:absolute;
+	//background-color: #f9f8f9;
+	border-radius: 25px;
+	//width: 181px;
+	//height: 50px;
+	text-align: center;
+	//line-height: 50px;
+	color: #f9f8f9;
+	//top: 40px;
+	//left: 266px;
+	font-size: 1em;
+	//box-shadow: 0px 2px 4px rgba(34, 25, 25, 0.2);
 }
 
 /*各个匹配人头像的大小*/
@@ -435,10 +416,10 @@ width:100%;
 
 .othertag{
 	position:absolute; 
-	height:95%; 
-	width:94%;
+	height:100%; 
+	width:100%;
 	overflow-x:hidden;
-	margin:2% 3% 2% 3%;
+	//margin:2% 3% 2% 3%;
 	background-color:white;
 }
 
@@ -468,8 +449,8 @@ width:100%;
     text-align: center;
     border-radius: 25px;
     margin-left: 5px;
-    margin-top:5px;
-    font-size:0.8em;
+    margin-top:10px;
+    font-size:1em;
     letter-spacing:1px;
     border:1px solid #d6e5f5;
 }
