--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -179,7 +179,6 @@ width:100%;
 	width:100%;
 	height:65%;
 	z-index:102;
-	//background-color:#f1f1f1;
 	//margin-left:6px;
 	top:3%;
 }
@@ -420,7 +419,7 @@ width:100%;
 	width:100%;
 	overflow-x:hidden;
 	//margin:2% 3% 2% 3%;
-	background-color:white;
+	//background-color:white;
 }
 
 .othertagtext{
