1.我的标签块高度自适应变化完成  2.聊天页放了共同选择的标签

--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page_web.css
@@ -20,3 +20,21 @@ html, body {
 
 #cancel_setup_button {float:left}
 
+.selectCp-container{
+	float:left;
+	//position:absolute;
+	top:32px;
+	width:100%;
+	background:white;
+}
+
+.selectCp{
+	float: left;
+    text-align: center;
+    border-radius: 25px;
+    margin-left: 5px;
+    margin-top:10px;
+    font-size:1em;
+    letter-spacing:1px;
+    border:1px solid #d6e5f5;
+}
