--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -452,6 +452,9 @@ width:100%;
     font-size:1em;
     letter-spacing:1px;
     border:1px solid #d6e5f5;
+    width:37px;
+    height:30px;
+    line-height:30px;
 }
 
 .add{
