1.加上一个打开聊天列表的临时按钮  2.在请求匹配列表，请求cp，选择cp这几个接口的请求和后台返回的时候都加上了响应时间的日志

--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
@@ -11,7 +11,7 @@ html, body {
 	height:11%;
 	width:100%;
 	border-bottom:1px solid #f1f1f1;
-	position:absolute;
+	//position:absolute;
 }
 
 .dialog >img{
