选择标签先动画和标签变暗，然后加上延时判断，如果不成功则我的标签出现感叹号点击重新请求选择且感叹号去除，如果成功则不作为

--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
@@ -187,3 +187,11 @@ line-height: 10px;
 	display:none;
 	overflow-y:auto;
 }
+
+.myTagFail{
+	width:5px; 
+	//position:absolute; 
+	top:-1px; 
+	left:-10px; 
+	border-bottom:1px solid gray;
+}
