--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -26,6 +26,9 @@ width:100%;
 	//overflow-y:scroll;
 	-webkit-overflow-scrolling: touch;
 	overflow:hidden;
+	background: url(../image/background1.jpg) no-repeat;
+	background-size:100% 100%;
+	
 }
 
 .topic_list {
@@ -73,10 +76,10 @@ width:100%;
 }
 
 .userimg>img {
-	height: 70%;
-	//width: 80%;
-	border-radius: 50%;
-	margin:0 10% 0 10%;
+	height: 60%;
+	width: 60%;
+	border-radius: 20%;
+	margin:0 15% 0 10%;
 }
 
 .topictitle {
@@ -180,7 +183,7 @@ width:100%;
 	height:65%;
 	z-index:102;
 	//margin-left:6px;
-	top:3%;
+	top:0%;
 }
 
 /*装头像和名字的容器*/
@@ -192,11 +195,14 @@ width:100%;
 
 /*我的标签容器*/
 .mytag-container{
-	width: 100%;
+	width: 98%;/*这个百分比与下面两个padding百分比总合为1*/
+	padding-left:1%;
+	padding-right:1%;
 	height: 30%;
 	float: left;
-	border-bottom:5px solid #f9f8f9;
-	border-top:5px solid #f9f8f9;
+	border-bottom:1px solid #555555;
+	border-top:1px solid #555555;
+	padding-bottom:8px;
 	//overflow-y:auto;
 }
 /*我的标签最外层容器*/
@@ -357,28 +363,43 @@ width:100%;
 	top:0px;
 	left:0px;
 }
+
+#cp-container{
+//padding-left:20px;
+//margin-left:20px;	
+}
 	
 .cp{ 
 	position:absolute; /*标签不用排列的时候不需要这个*/
 	top:0px;
 	left:0px;
 	border-radius:50%; 
-	border:1px solid #e5efff;
+	//border:1px solid #e5efff;
 	cursor:pointer;
+	//opacity:0.3;
+	//background-color:#fffff0;
+		//filter:Alpha(opacity=50);
+	background-color:rgba(255,255,255,0.3);
+	text-shadow:#000000 0 0 10px;
+	color:#ffffff;
 	}
 
 .incp{ 
-	position:absolute;
+	//position:absolute;
+	position:relative;
 	//background:url(../image/cp.png) no-repeat center center;  
 	//background-size:100% auto;
 	font-family:'微软雅黑';
 	border-radius:50%; 
-	border:1px solid #e5efff;
+	//border:1px solid #e5efff;
+	//FILTER:DropShadow(Color=#808080, OffX=5, OffY=5, Positive=1);
 	}
 	
 .incp div{
 	position:absolute;
 	text-align:center;
+		//text-shadow:blue;
+	//text-shadow:{0 0 0.3em #87F,0 0 0.3em #87F,0 0 0.3em #87F};
 }
 
 /*叶夷   2017.07.04
@@ -442,31 +463,46 @@ width:100%;
 }
 
 .enterdialogList{
-	//width:96%;
-	//height:6%;
-	background-color:#f1f1f1;
+	width:50px;
+	height:50px;
+	//background-color:#f1f1f1;
 	//text-align:center;
 	//margin-top:-25px;
-	//margin-left:6px;
-	//border-radius:0px 0px 10px 10px;
+	margin-left:25px;
+	border-radius:25px 25px 25px 25px;
+	//background-color:rgba(100,100,100,0.9);
+	padding-top:8px;
+	padding-left:10px;
 	position:fixed;
-	top:0px;
-	left:100px;
+	top:878px;
+	left:-10px;
+	z-index:999;
+	//box-shadow:0 0 50px black;
+}
+
+.enterdialogList img{
+	height:35px;
+	width:35px;
+	box-shadow:0 0 50px black;
 }
 
 .mytag{
 	float: left;
     text-align: center;
     border-radius: 25px;
-    margin-left: 5px;
+    margin-left: 10px;
     margin-top:10px;
+    //margin-right:6px;
     font-size:1em;
     letter-spacing:1px;
-    border:1px solid #d6e5f5;
+    border:1px solid gray;
     width:37px;
     height:30px;
-    line-height:30px;
+    line-height:28px;
     cursor:pointer;
+    color:white;
+    background-color:rgba(0,0,0,0.3);
+    text-shadow:1px 1px 0.3em black; 
 }
 
 .add{
