--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -474,7 +474,7 @@ width:100%;
 	padding-top:8px;
 	padding-left:10px;
 	position:fixed;
-	top:878px;
+	top:94%;
 	left:-10px;
 	z-index:999;
 	//box-shadow:0 0 50px black;
