--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -31,6 +31,15 @@ width:100%;
 	
 }
 
+#showatloaded #background-rightbar{
+	position:absolute;
+	right:0;
+	bottom:0;
+	height:100%;
+	width: 20px;
+	z-index: 999;
+}
+
 .topic_list {
 	margin-top: 120px;
 	margin-right: 10px;
