--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -371,9 +371,9 @@ width:100%;
 	position:absolute; /*标签不用排列的时候不需要这个*/
 	top:0px;
 	left:0px;
-	
+	/* 
 	border: 1px solid black;
-	border-radius: 50%;
+	border-radius: 50%; */
 }
 
 #cp-container{
@@ -395,8 +395,8 @@ width:100%;
 	text-shadow:#000000 0 0 10px;
 	color:#ffffff;
 	
-	border: 1px solid white;
-	border-radius: 50%;
+	/* border: 1px solid white;
+	border-radius: 50%; */
 	}
 
 .incp{ 
@@ -523,4 +523,17 @@ width:100%;
 
 .add{
 	//color:#fccf63;
+}
+
+.selectItem{
+	position:absolute;
+	top: 54.5px;
+	width: 100%;
+	display:none;
+}
+.yesItem{
+	float:left;
+}
+.noItem{
+	float:right;
 }
