选择标签点击放大效果实现一半

--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -526,8 +526,8 @@ width:100%;
 }
 
 .selectItem{
-	position:absolute;
-	top: 54.5px;
+	//position:absolute;
+	//top: 54.5px;
 	width: 100%;
 	display:none;
 }
