标签选择放大效果完成，接下来绑定重新的接口

--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -525,15 +525,21 @@ width:100%;
 	//color:#fccf63;
 }
 
-.selectItem{
-	//position:absolute;
-	//top: 54.5px;
-	width: 100%;
+.yesItem{
+	position:absolute;
 	display:none;
 }
-.yesItem{
-	float:left;
-}
 .noItem{
-	float:right;
+	position:absolute;
+	display:none;
+}
+.cover{
+	width: 387px; 
+	height: 620px; 
+	background: rgb(0, 0, 0); 
+	position: fixed; 
+	z-index: 102; 
+	opacity: 0.5;
+	top:0px;
+	left:0px;
 }
