--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -87,7 +87,9 @@ width:100%;
 .userimg>img {
 	height: 60%;
 	width: 60%;
-	border-radius: 20%;
+	border-radius: 32%;
+	border:1px solid #727272;
+	box-shadow:1px 1px 1px #0d0d0d;
 	margin:0 15% 0 10%;
 }
 
@@ -200,7 +202,22 @@ width:100%;
 	width:100%;
 	height:65%;
 	z-index:102;
+	position:relative;
 }
+
+#open-matcheduserlist{
+	position:absolute;
+	top:25px;
+	right:10px;
+	height: 30px;
+}
+
+#open-matcheduserlist>img{
+  height: 20px;
+  width: 20px;
+	border:1px solid #6c6c6c;
+	border-radius:30%; 
+} 
 
 /*我的标签容器*/
 .mytag-container{
@@ -401,6 +418,7 @@ width:100%;
 	font-family:'微软雅黑';
 	border-radius:50%; 
 	background-color:rgba(255,255,255,0.3);
+	box-shadow:1px 1px 1px #777777;
 	//border:1px solid #e5efff;
 	//FILTER:DropShadow(Color=#808080, OffX=5, OffY=5, Positive=1);
 	}
@@ -411,6 +429,19 @@ width:100%;
 		//text-shadow:blue;
 	//text-shadow:{0 0 0.3em #87F,0 0 0.3em #87F,0 0 0.3em #87F};
 }
+
+.cp-selectednumber{
+	position:absolute;
+	top:0px;
+	left:43px;
+	color:#daa165;
+	font-size:12px;
+	height: 16px;
+	border-radius: 20%;
+	background-color:rgba(55,55,55,0.5);
+
+}
+
 
 /*叶夷   2017.07.04
 	匹配人列表*/
@@ -427,7 +458,7 @@ width:100%;
 	//top: 40px;
 	//left: 266px;
 	font-size: 1em;
-	//box-shadow: 0px 2px 4px rgba(34, 25, 25, 0.2);
+	
 }
 
 /*各个匹配人头像的大小*/
@@ -435,10 +466,15 @@ width:100%;
 	position:absolute;
 	border-radius:50%;
 	cursor:pointer;
+	border-color:white;
+	
 }
 
 .mu img{
 	border-radius:50%;
+	border:1px solid #838383;
+	box-shadow: 1px 1px 1px #444444; 
+	//rgba(255, 255, 255, 0.7);
 }
 
 /*网站名*/
@@ -511,9 +547,28 @@ width:100%;
     line-height:28px;
     cursor:pointer;
     color:white;
-    background-color:rgba(0,0,0,0.3);
+    background-color:rgba(66,66,66,0.9);
     text-shadow:1px 1px 0.3em black; 
+    box-shadow:1px 1px 1px black;
+    position:relative;/*设为relative,下级的absolute才能生效*/
 }
+
+.mytag-selectednumber{
+	position:absolute;
+	//position:relative;
+	top:-6px;
+	left:50px;
+	height:10px;
+	padding-left:3px;
+	padding-right:2px;
+	line-height:10px;
+	color:#b48f4c;
+	font-size:10px;
+	background-color:#505050;
+	border-radius:40%;
+	//border:1px solid #757575;
+}
+
 
 .add{
 	//color:#fccf63;
