xu将选择人数的样式改变之后，合并

--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -564,7 +564,7 @@ width:100%;
 	//position:relative;
 	top:-6px;
 	left:50px;
-	height:10px;
+	//height:10px;
 	padding-left:3px;
 	padding-right:2px;
 	line-height:10px;
