--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -563,7 +563,7 @@ width:100%;
 	position:absolute;
 	//position:relative;
 	top:-6px;
-	left:50px;
+	right:2px;
 	height:10px;
 	padding-left:3px;
 	padding-right:2px;
@@ -572,6 +572,20 @@ width:100%;
 	font-size:10px;
 	background-color:#505050;
 	border-radius:40%;
+	//border:1px solid #757575;
+}
+
+.unSelectCPNode{
+	position:absolute;
+	top:-6px;
+	left:2px;
+	height:14px;
+	padding-left:3px;
+	padding-right:2px;
+	line-height:10px;
+	font-size:10px;
+	background-color:red;
+	border-radius:50%;
 	//border:1px solid #757575;
 }
 
