选择标签的接口调整，选择人数变化的显示完成

--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
@@ -157,9 +157,9 @@ line-height: 10px;
 	width: 88px;
 	text-align:center;
 	font-size:12px;
-	background:url('../image/titbg.gif') center top repeat-x;
+	background:url('../image/timg.gif') center top repeat-x;
 	border-radius: 10px;
-	display:none;
+	//display:none;
 	background-size:8px;
 }
 
