1.推荐标签的选择人数数字的背景宽度随着数字的宽度变化  2.我的标签选择人数点击的时候显示   3.解决变暗的时候连续点击会持续变暗的问题

--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -563,9 +563,9 @@ width:100%;
 	position:absolute;
 	//position:relative;
 	top:-6px;
-	right:2px;
+	//right:2px;
 	height:10px;
-	padding-left:3px;
+	padding-left:2px;
 	padding-right:2px;
 	line-height:10px;
 	color:#b48f4c;
