聊天列表页和对话页的样式调整. 将两个.properties文件列入忽略文件.

--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page_web.css
@@ -24,8 +24,11 @@ html, body {
 	float:left;
 	//position:absolute;
 	top:32px;
-	width:100%;
+	width:96.8%;
 	background:white;
+	padding:1.6%;
+	padding-top:0px;
+	padding-bottom:0px;
 	//height:20px;
 	display:none;
 }
