--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.css
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.css
@@ -8,80 +8,27 @@ body{position:relative}
 
 #notification {font-size:7px;  position:fixed; top:32px; right:5px}
 #header {float:left;
-	width:100%; height: 32px; background:url('../image/titbg.gif') center top repeat-x;background-size:8px;
+	width:100%; height: 50px; 
+	/*background:url('../image/titbg.gif') center top repeat-x;background-size:8px;*/
+	background-color:#2b526c;
 	border-bottom:1px solid #d0d0d0; z-index:12;}
 
-#moretodoicon {float:right; width: 38px; margin-top:6px; border-left:1px solid #d8d8d8}
+#goback{position:relative;height:50px;font-size:22px;float:left;z-index:15}
+#goback img{height:16px; width:22px; margin-top:16px;margin-left:17px;margin-right:10px;}
 
-#goback{font-size:22px;float:left;}
-#goback img{height:18px; width:24px; margin-top:7px;margin-left:10px;margin-right:10px;}
-
-#close{font-size:22px;float:left;}
-#close img{height:18px; width:18px; margin-top:7px;margin-left:10px;margin-right:10px;}
-
-#title{color:#800000;float:left;height:32px; line-height:32px;border-left:1px solid #d8d8d8; padding-left:10px; z-index:13;}
-
-
-#changetitlebutton {border:1px solid #b8b8b8; border-radius:4px; padding:3px; margin-top:5px;
-	float:right; background-color:#dddddd;font-size:10px;}
-
-
-#moretodoicon img {height:18px; width:18px; margin-left:10px;margin-right:10px;z-index:10;}
-
-._closeBtn{
-	float:right;
-	margin:6px 10px;
-	border-left:1px solid #d8d8d8;
-}
-._closeBtn>img{
-	width:18px;height:18px;
-	padding-left: 10px;
-}
-
-#moretodobox {
-	position:fixed;top:40px;right:10px;
-//border:1px solid #ddd8aa;border-radius:4px;
-//background-color: #f0f0f0;
-//padding:3px;padding-left:3px;padding-right:3px;
-	/*display:none;*/
-	padding:3px;
-	margin-right: 5px;
-	opacity: 0.8;
-	text-align:center;
-//font-size:10px;
-	z-index:10;
-}
-
-#search{font-size:20px; padding:8px;
-	width: 60px;margin:3px;
-	border:1px solid #ff8811;border-radius:4px;
-	background-color: #ddd;}
-
-
-.descendant-div{height: 60px;margin: 0;padding: 0;}
-.topic-name{width: 98%;height: 55px;outline: 0;border: 0;resize: none;}
-
-#mergeplussetup_wrap,#search_wrap,#topic_wrap{margin:0}
-
-.search_topic{float:left; font-size:10px;
-	margin:3px;padding:5px;width:66px;
-	//border:1px solid #ff8811;border-radius:4px;
-	background-color: #ddd;background:url('../image/titbg.gif') center top repeat-x;
-	box-shadow:0px 2px 4px rgba(34, 25, 25, 0.2);}
-
-.merge{float:left; font-size:10px;
-	margin:3px;padding:5px;width:24px;
-	//border:1px solid #ff8811;border-radius:4px;
-	background-color: #ddd;
-	background-color: #ddd;background:url('../image/titbg.gif') center top repeat-x;
-	box-shadow:0px 2px 4px rgba(34, 25, 25, 0.2);}
-
-.setup{float:left; font-size:10px;
-	margin:3px;padding:5px;width:24px;
-	//border:1px solid #ff8811;border-radius:4px;
-	background-color: #ddd;
-	background-color: #ddd;background:url('../image/titbg.gif') center top repeat-x;
-	box-shadow:0px 2px 4px rgba(34, 25, 25, 0.2);}
+#title{    
+	position: absolute;
+    text-align: center;
+    color: #e7e7e7;
+    float: left;
+    height: 32px;
+    width: 100%;
+    line-height: 32px;
+    /* padding-left: 100px; */
+    margin-top: 7px;
+    font-size: 18px;
+    z-index: 13;
+    }
 
 #dialog_box{font-size:14px; background-color: #ffffff; overflow-x:hidden;height:100%; width:100%;
 	border-bottom:1px solid #d8d8d8;}
