--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page.css
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page.css
@@ -1,13 +1,33 @@
 
-body{position:relative}
+body{
+	position:relative;
+	background:url('../image/dialoglist-background.jpg') 100% 100% no-repeat;
+	background-size:100% 100%;
+	}
 
-#header {float:left;
-	width:100%; height: 32px; background:url('../image/titbg.gif') center top repeat-x;background-size:8px;
-	border-bottom:1px solid #d0d0d0; z-index:12;}
+#header {
+    float: left;
+    width: 100%;
+    height: 43px;
+    background-size: 8px;
+    border-bottom: 1px solid #5d5d5d;
+    /* border-radius: 17px; */
+    margin-bottom: 20px;
+    /* margin-top: 10px; */
+    z-index: 12;
+    /* margin-left: 2%; */
+    /* margin-right: 10px; */
+    background-color: rgb(250, 250, 250);
+	}
 
-#goback{font-size:22px;float:left;}
-#goback img{height:18px; width:24px; margin-top:7px;margin-left:10px;margin-right:10px;}
+#goback{position:relative;height:43px;width:60px;font-size:22px;float:left;cursor:pointer;z-index:14}
+#goback img{    
+    height: 16px;
+    width: 20px;
+    margin-top: 12px;
+    margin-left: 21px;}
 
+/*原用于home键
 ._closeBtn{
 	float:right;
 	margin:6px 10px;
@@ -16,11 +36,22 @@ body{position:relative}
 ._closeBtn>img{
 	width:18px;height:18px;
 	padding-left: 10px;
-}
+}*/
 
-#title{color:#800000;float:left;height:32px; line-height:32px;border-left:1px solid #d8d8d8; padding-left:10px; z-index:13;}
+#title{
+	position:absolute;
+	width:100%;
+	text-align:center;
+	color: #000000;
+	float: left;
+    height: 32px;
+    line-height: 40px;
+    //margin-left: 30%;
+    font-size: 18px;
+    //padding-left: 10px;
+    z-index: 13;}
 
-#dialog_list{font-size:14px; background-color: #ffffff; overflow-x:hidden;width:100%;height:634px;}
+#dialog_list{font-size:14px; overflow-x:hidden;width:100%;height:634px;}
 	
 .unread{
 height:12px; 
