--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
@@ -3,6 +3,7 @@ html, body {
 	width: 100%;
 	margin:0px;
 	background-color: #fff;
+	
 	//z-index:-99;
 	overflow-y:hidden;
 }
@@ -10,15 +11,18 @@ html, body {
 .dialog{
 	height:11%;
 	width:100%;
-	border-bottom:1px solid #f1f1f1;
+	//border-bottom:1px solid #525252;
+	margin-top: 10px;
+    padding-bottom: 15px;
 	//position:absolute;
 }
 
 .dialog >img{
 	//width: 14%;
 	//height:80%;
+	 margin-left: 15px;
 	position: absolute;
-	border-radius:5px;
+	border-radius:50%;
 	//margin:1.5%;
 }
 
@@ -27,32 +31,27 @@ html, body {
 	position: absolute;
 	//width: 300px;
 	//margin:1.5%;
+	border-bottom: 1px solid #585858;
 }
 
 .dialog_content_top{
 	float: left;
     width: 100%;
-    height: 50%;
+    //height: 50%;
     line-height: 25px;
+    
 }
 
-.dialog_content_msg{
-	height: 50%;
-	width: 100%;
-	float:left;
-	line-height: 25px;
-	color:#cdc9c9;
-	font-size:1.2em;
-}
 
 .dialog_content_name{
 	height: 100%;
-	width:70%;
+	//width:70%;
 	float:left;
 	//font-weight:500;
 	//font-size:14px;
-	color:#cdc9c9;
+	color:#b6b6b6;
 	//font-size:1.3em;
+	//padding-left: 20px;
 }
 
 .dialog_content_time{
@@ -63,4 +62,15 @@ html, body {
 	color:#cdc9c9;
 	//font-size:0.5em;
 	text-align:right;
+	margin-right: 15px;
+}
+
+.dialog_content_msg{
+	height: 50%;
+	//width: 100%;
+	float:left;
+	line-height: 25px;
+	color:#7c7c7c;
+	font-size:1.2em;
+	//padding-left: 20px;
 }
