--- a/xunta-web/src/main/webapp/client_code/css/popcontext.css
+++ b/xunta-web/src/main/webapp/client_code/css/popcontext.css
@@ -1,24 +1,42 @@
 #tipsObj{text-align: center;font-size: 12px;color: red;position:absolute;height:30px;line-height: 30px;}
 .tipsContext{background-color: #fff;width: 100px;height: 25px;margin:0 auto;line-height: 25px;border-radius:5px;border: 1px solid #777;}
 
+#htmlobj{
+	color:red;
+	background-color:rgba(100,100,100,0);
+	
+}
+
+
 .pop-title{
-    float: left;width: 100%;height: 40px;line-height: 40px;
-    border-bottom: 1px solid #f1f1f1;font-size: 15px;
-    color: #999;
+    float: left;width: 100%;height: 36px;line-height: 36px;
+    border-bottom: 1px solid #bbbbbb;font-size: 15px;
+    border-top-left-radius:6px;
+    border-top-right-radius:6px;
+    color: #1c1c1c;
+    text-shadow: 0 0 5px white;
+    background-color:rgba(230,230,230,0.93);
+    
 }
 .title-div{
-    float: left;width: 85%; /*@wsy 2016-10-11*/
-    height: 40px;padding-top: 10px;/*@zhyy 2016-11-29 让标题垂直居中显示*/
+    float: left;width: 100%; /*@wsy 2016-10-11*/
+    height: 36px;
+    //padding-top: 10px;/*@zhyy 2016-11-29 让标题垂直居中显示*/
+    
 }
 .title-div span{
-    padding-left: 15px;
-
+	width:95%;
+    //padding-left: 15px;
     //padding-top: 5px; /*@wsy 2016-10-14*/
     float: left;/*@wsy 2016-10-14*/
-    line-height: 19px; /*@wsy 2016-10-14*/
+    line-height: 30px; /*@wsy 2016-10-14*/
+    text-align: center;
 }
 .close-div{
-    float: left;width: 11%;/*@wsy 2016-10-11*/
+    //float: left;
+    position:absolute;
+    right:0px;
+    width: 11%;/*@wsy 2016-10-11*/
     padding:0 2% 0 0;
     text-align: right;
     cursor: pointer;
@@ -39,9 +57,14 @@
     padding:0 5% 0 2%;overflow-y:auto;overflow-x: hidden;}
 
 .btn-div{
-    float: left;width: 20%;text-align: center;
+    //float: left;
+    position:absolute;
+    right:0px;
+    width: 20%;text-align: center;
     //border-top: 1px solid #f1f1f1;
-    height: 100%;line-height: 40px;font-size:16px;
+    //height: 100%;
+    line-height: 40px;font-size:16px;
+    color:#1f1f1f;
 }
 .pop-btn{
     min-width: 86px;width:auto;height: 45px;
@@ -52,7 +75,7 @@
 .pop-btn:hover{background-color:#428bca;color: #fff;}
 
 
-#entrytag{float: left;width: 100%;font-size: 15px;}
+#entrytag{float: left;width: 100%;font-size: 15px;height:43px;border-bottom-left-radius:6px;border-bottom-right-radius:6px;}
 #choosetopic{display: none;}
 .inline-rule{float: left;width: 100%;height: 30px;line-height: 30px;}
 input[type='checkbox'],input[type='radio']{vertical-align:middle;}
