--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page_web.css
@@ -2,7 +2,7 @@ html, body {
 	height: 100%;
 	width: 100%;
 	margin:0px;
-	background-color: #e8e8e8;
+	background-color: #ffffff;
 	//z-index:-99;
 }
 
@@ -31,6 +31,11 @@ html, body {
 	padding-bottom:0px;
 	//height:20px;
 	display:none;
+	background:#d8d8d8;
+}
+
+.selectCp-container>div{
+	 color:#5e5e5e;
 }
 
 .selectCp{
@@ -41,5 +46,6 @@ html, body {
     margin-top:10px;
     font-size:1em;
     letter-spacing:1px;
-    border:1px solid #d6e5f5;
+    border:1px solid #a1a4a7;
+    color:#5e5e5e;
 }
