--- a/xunta-web/src/main/webapp/client_code/dialog_page/inputframe.css
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/inputframe.css
@@ -6,7 +6,7 @@ padding-bottom:4px;
 }
 #inputbox,#inputbox1 {	float:left;	
 color:gray;
-border: 1px solid #c8c8c8;	border-radius: 3px;
+border: 1px solid #dfdfdf;	border-radius: 3px;
 height:28px; width: 75%; 	
 margin:0px;
 margin-left:5px; 
