--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
@@ -59,7 +59,7 @@ html, body {
 	width:30%;
 	float:right;
 	font-size:12px;
-	color:#cdc9c9;
+	color:#c2c2c2;
 	//font-size:0.5em;
 	text-align:right;
 	margin-right: 15px;
