--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
@@ -154,21 +154,26 @@ line-height: 10px;
 .getmoretopics{
 	margin:35px auto;
 	padding-bottom:4px;
-	width: 88px;
+	width: 54px;
 	text-align:center;
 	font-size:12px;
-	background:url('../image/titbg.gif') center top repeat-x;
+	//background:url('../image/titbg.gif') center top repeat-x;
+	background-color:@d2d2d2;
 	border-radius: 10px;
 	display:none;
 	background-size:8px;
 }
 
 .tag-name{
-	width: 100%;
-	height: 100%;
-	outline: 0;
-	border: 0;
-	resize: none;
+    width: 97%;
+    height: 73%;
+    outline: 0;
+    border: 0;
+    resize: none;
+    margin-top: 6px;
+    margin-left: 3%;
+    background-color:rgba(0,0,0,0);
+    border-bottom: 1px solid #a09e9e;
 }
 
 .addtag-div{
@@ -180,11 +185,12 @@ line-height: 10px;
 }
 
 .searchtag_suggest{
-	width:99%;
+	width:78%;
 	height:100px;
 	float:left;
 	top:-10px;
-	border:1px solid #f1f1f1;
+	padding-left:2%;
+	/*border:1px solid #f1f1f1;*/
 	display:none;
 	overflow-y:auto;
 }
@@ -195,4 +201,11 @@ line-height: 10px;
 	top:-1px; 
 	left:-10px; 
 	border-bottom:1px solid gray;
+}
+
+#htmlobj{
+	color:red;
+	
+	
+	
 }
