--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
@@ -9,11 +9,11 @@ html, body {
 }
 
 .dialog{
-	height:11%;
+	//height:11%;
 	width:100%;
 	//border-bottom:1px solid #525252;
-	margin-top: 10px;
-    padding-bottom: 15px;
+	//margin-top: 10px;
+    padding-bottom: 10px;
 	//position:absolute;
 }
 
@@ -37,9 +37,8 @@ html, body {
 .dialog_content_top{
 	float: left;
     width: 100%;
-    //height: 50%;
+    height: 50%;
     line-height: 25px;
-    
 }
 
 
@@ -73,4 +72,7 @@ html, body {
 	color:#7c7c7c;
 	font-size:1.2em;
 	//padding-left: 20px;
+}
+.dialoglistOut{
+	width:100%;height:797px;margin-top:64px;overflow-x:hidden
 }
