在信息没有全显的时候, 会出现一些空框和线条. 这些元素应该先隐藏, 等必要的数据到手后再显出来.

--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -232,6 +232,7 @@ width:100%;
 	border-top:1px solid #555555;
 	padding-bottom:8px;
 	//overflow-y:auto;
+	display:none;
 }
 /*我的标签最外层容器*/
 .search-head{
@@ -536,6 +537,7 @@ width:100%;
 	left:20px;
 	z-index:102;
 	//box-shadow:0 0 50px black;
+	display:none;
 }
 
 .enterdialogList img{
