将聊天列表大小的参照物修改成屏幕宽度，且将屏幕两边空隙加大

--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
@@ -28,7 +28,7 @@ html, body {
 
 .dialog_content{
 	//height: 80%;
-	float: right;
+	float: left;
 	//width: 300px;
 	//margin:1.5%;
 	border-bottom: 1px solid #585858;
