将聊天列表的未读消息位置重新调整，且聊天列表也改成position

--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
@@ -14,7 +14,7 @@ html, body {
 	//border-bottom:1px solid #525252;
 	//margin-top: 10px;
     padding-bottom: 10px;
-	//position:absolute;
+	position:absolute;
 }
 
 .dialog >img{
