--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page.css
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page.css
@@ -56,6 +56,7 @@ body{
 	overflow-x:hidden;
 	width:100%;
 	height:100%;
+	position:absolute;
 	}
 	
 .unread{
@@ -68,4 +69,5 @@ background-color:#f8f8f8;
 padding-left:2px;
 padding-right:2px;
 line-height: 10px;
+position:absolute;
 }
