将我的标签框width调整

--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -238,7 +238,7 @@ width:100%;
 
 /*我的标签容器*/
 .mytag-container{
-	//width: 98%;/*这个百分比与下面两个padding百分比总合为1*/
+	width: 100%;/*这个百分比与下面两个padding百分比总合为1*/
 	padding-left:10px;
 	padding-right:20px;
 	height: 30%;
