1.将首页的左边间距调整解耦 2.小绿点大小和用户头像对比

--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -520,9 +520,9 @@ width:100%;
 .othertag{
 	position:absolute; 
 	height:100%; 
-	width:100%;
+	width:99%;
 	overflow-x:hidden;
-	//margin:2% 3% 2% 3%;
+	margin-left:1%;
 	//background-color:white;
 }
 
