我的标签 左间距微调了一下. 取消了退出图标,改为点击我的头像而退出(待加一个确认对话框).

--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -64,7 +64,7 @@ width:100%;
 	//padding-top:21px;
 	//height:87%;
 }
-
+/*
 #createnewtopic {
 	//left: 11px;
 	width:33%;
@@ -149,7 +149,7 @@ width:100%;
 	width:18px;
 	height:18px;
 }
-
+/*
 .recentmsg {
 	//float:clear;
 	color: #686868;
@@ -239,7 +239,7 @@ width:100%;
 /*我的标签容器*/
 .mytag-container{
 	width: 100%;/*这个百分比与下面两个padding百分比总合为1*/
-	padding-left:10px;
+	padding-left:9px;
 	padding-right:20px;
 	height: 30%;
 	float: left;
