调节了左下角聊天列表图标的位置和大小.

--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -549,15 +549,16 @@ width:100%;
 	//padding-top:8px;
 	//padding-left:10px;
 	position:fixed;
-	bottom:2%;
-	left:4%;
+	bottom:3%;
+	left:5%;
 	z-index:102;
 	//box-shadow:0 0 50px black;
 	display:none;
+	height:4%;/*这里设一个值,下面的img高度才能起作用.*/
 }
 
 .enterdialogList>img{
-	//height:35px;
+	height:100%;
 	width:23%;
 	box-shadow:0 0 50px black;
 }
