--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
@@ -58,10 +58,10 @@ html, body {
 	width:30%;
 	float:right;
 	font-size:12px;
-	color:#c2c2c2;
+	color:#8e8e8e;
 	//font-size:0.5em;
 	text-align:right;
-	margin-right: 15px;
+	margin-right: 3px;
 }
 
 .dialog_content_msg{
