--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
@@ -9,7 +9,7 @@
 
 .username {
     text-align: center;
-    font-size: 84%;
+    font-size: 88%;
     color: #a2a2a2;
     cursor: default;
     position: absolute;
@@ -19,8 +19,8 @@
 }
 
 #userimg {
-//height: 34%;
-width: 100%;
+	height: 38%;
+	width: 100%;
     position: absolute;
     bottom: 13%;
     /* padding-top: 100%; */
@@ -29,7 +29,7 @@ width: 100%;
 
 #userimg>img {
 //	position:relative;
-	//height: 100%;
+	height: 90%;
 	width: 100%;
 	border-radius: 29%;
 }
