--- a/xunta-web/src/main/webapp/client_code/dialog_page/inputframe.css
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/inputframe.css
@@ -4,12 +4,13 @@ height: 30px;
 width: 100%;
 padding-bottom:4px;
 }
-#inputbox,#inputbox1 {	float:left;	
+#inputbox{
+float:left;	
 color:gray;
 border: 1px solid #dfdfdf;	border-radius: 3px;
 height:28px; width: 75%; 	
 margin:0px;
-margin-left:5px; 
+margin-left:3px; 
 padding:0px;
 padding-left: 5px;	padding-right: 5px;
 background:#ffffff;	
@@ -19,7 +20,7 @@ outline:none;
 #inputsubmit{float:right;	
 border:1px solid #c8c8c8;	border-radius:3px;	
 height: 28px;	width: 40px;	
-margin-right:5px;	
+margin-right:3px;	
 //outline:none;
 }
 
