--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -544,7 +544,7 @@ width:100%;
 	//text-align:center;
 	//margin-top:-25px;
 	//margin-left:25px;
-	border-radius:25px 25px 25px 25px;
+	// border-radius:25px 25px 25px 25px;
 	//background-color:rgba(100,100,100,0.9);
 	//padding-top:8px;
 	//padding-left:10px;
@@ -555,11 +555,12 @@ width:100%;
 	//box-shadow:0 0 50px black;
 	display:none;
 	height:4%;/*这里设一个值,下面的img高度才能起作用.*/
+	width:6%;/*下层图标宽为100%,取定于该百分比.该图片的长宽比将决定于屏幕的长宽比.*/
 }
 
 .enterdialogList>img{
 	height:100%;
-	width:23%;
+	width:100%;
 	box-shadow:0 0 50px black;
 }
 
@@ -616,18 +617,23 @@ width:100%;
 }
 
 
-.add{
+#addtag{
 	color:#cccccc;
 	border:1px solid #a5a5a5;
-	background-color:rgba(34,34,34,0.9);
-	font-size: 23px;
+	//background-color:rgba(34,34,34,0.9);
+	//font-size: 23px;
 	width:37px;
 	height:30px;
-	line-height:25px;
-	
-	
-	
+	//line-height:25px;
+	background:url('../image/plus3.jpg') center center no-repeat;
+	background-size:90% 90%;
 }
+/*
+#addtag>img{
+	height:20px;
+	width:20px;
+}*/
+
 
 .yesItem,.noItem{
 	position:absolute;
