解决滚动条隐藏在IE浏览器和火狐浏览器不兼容的问题

--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -255,6 +255,19 @@ width:100%;
 width:0px;
 height:0px;
 }
+//解决滚动条隐藏在IE浏览器不兼容的问题
+.mytag-container{
+    -ms-scroll-chaining: chained;
+    -ms-overflow-style: none;
+    -ms-content-zooming: zoom;
+    -ms-scroll-rails: none;
+    -ms-content-zoom-limit-min: 100%;
+    -ms-content-zoom-limit-max: 500%;
+    -ms-scroll-snap-type: proximity;
+    -ms-scroll-snap-points-x: snapList(100%, 200%, 300%, 400%, 500%);
+    -ms-overflow-style: none;
+    //overflow: auto;
+}
 
 /*我的标签最外层容器*/
 .search-head{
@@ -532,9 +545,22 @@ height:0px;
 	//background-color:white;
 }
 
-#cp-show::-webkit-scrollbar {
+.othertag::-webkit-scrollbar {
 width:0px;
 height:0px;
+}
+//解决滚动条隐藏在IE浏览器不兼容的问题
+.othertag{
+    -ms-scroll-chaining: chained;
+    -ms-overflow-style: none;
+    -ms-content-zooming: zoom;
+    -ms-scroll-rails: none;
+    -ms-content-zoom-limit-min: 100%;
+    -ms-content-zoom-limit-max: 500%;
+    -ms-scroll-snap-type: proximity;
+    -ms-scroll-snap-points-x: snapList(100%, 200%, 300%, 400%, 500%);
+    -ms-overflow-style: none;
+    //overflow: auto;
 }
 
 .othertagtext{
