在PC端上页面加上边框线，在移动端去除边框线

--- a/xunta-web/src/main/webapp/client_code/index_page/index.css
+++ b/xunta-web/src/main/webapp/client_code/index_page/index.css
@@ -18,7 +18,7 @@ html, body {
 	width:80%;*/
 	
 	background-color:#ffffff;
-	//border:#B0B0B0 1px solid;
+	border:#B0B0B0 1px solid;
 	//overflow-y:scroll
 }
 
@@ -43,7 +43,7 @@ width:100%;height:40%;
 	width:100%;	//backgrond-color:rgba(f,f,f,1.0);
 	border: 0px;
 	/**将padding取消，防止手机屏幕出现只有上边和左边的空隙*/
-	//padding:1px;
+	padding:1px;
 }
 
 #loadinganimation {
